--- a/assets/style.css
+++ b/assets/style.css
@@ -1,39 +1,37 @@
-.container {
-    margin: auto;
-    width: 100%;
-    height: 100px;
-    text-align: center;
-  }
-  
-  .welcome {
-    margin-bottom: 20px;
-  }
+#quiz-container {
+  max-width: 500px;
+  margin: 0 auto;
+  text-align: center;
+}
 
-  #countdown {
-    text-align: right;
-    margin-right: 50px;
+.welcome {
+  text-align: center;
+  font-size: large;
+}
 
-  }
-  
-  #quizEndScreen { 
-    margin-bottom: 20px;
-    font-size: 50px;
-    width: 100%;
-    height: 25px;
-  }
+#choices {
+  list-style: none;
+  padding: 0;
+  margin: 0;
+}
 
-  #nameLog {
-    margin-bottom: 10px;
-    font-size: 50px;
-    width: 100%;
-    height: 25px;
-  }
-  
-  
-  #read {
-    margin: auto;
-    padding: 10px;
-    width: 100%;
-    height: 25px;
-  }
-  
+#choices li {
+  margin: 10px 0;
+}
+
+#submit-button,
+#next-button {
+  margin-top: 10px;
+}
+
+#score {
+  font-weight: bold;
+  margin-top: 10px;
+}
+
+#timer {
+  font-weight: bold;
+  margin-top: 10px;
+  font-size: 24px;
+  color: #f00; /* Change the color to your liking */
+}
